First version of the NiederSachsen skin
Changes:
- rename minimal to niedersachsen
- colour changes
- logo in header
- fixed header
- new background image

--- a/less/gn_editor_niedersachsen.less
+++ b/less/gn_editor_niedersachsen.less
@@ -1,6 +1,6 @@
-@import "gn_search_minimal.less";
+@import "gn_search_niedersachsen.less";
 @import "../../../style/gn_editor.less";
-@import "gn_view_minimal.less";
+@import "gn_view_niedersachsen.less";
 // import default editor styles
 @import "../../default/less/gn_editor_default.less";
 
@@ -148,6 +148,11 @@
     }
     .btn {
       border-radius: 0;
+    }
+    .gn-scroll-spy {
+      .btn-round {
+        border-radius: 50%;
+      }
     }
     .input-group-addon, .input-group-btn {
       width: 0.1%;
