--- a/less/gn_results_niedersachsen.less
+++ b/less/gn_results_niedersachsen.less
@@ -1,6 +1,6 @@
 @import "../../../style/gn_search.less";
 // variables for manipulating the theme
-@import "gn_variables_minimal.less"; // must be last
+@import "gn_variables_niedersachsen.less"; // must be last
 
 .gn-row-results {
   padding-top: 15px;
@@ -261,7 +261,7 @@ ul.gn-resultview {
     .gn-md-footer {
       .clearfix();
       margin-top: 5px;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px dotted #ccc;
       .gn-md-rating {
         float: left;
         margin-top: 10px;
@@ -305,6 +305,9 @@ ul.gn-resultview {
     width: 100%;
     max-width: none;
     height: auto;
+    border-left: 4px solid #e50046;
+    padding: 0 15px;
+    margin-bottom: 25px;
     .gn-md-title {
       min-height: 0;
     }
