--- a/less/gn_search_niedersachsen.less
+++ b/less/gn_search_niedersachsen.less
@@ -1,26 +1,26 @@
 @import "../../../style/gn_search.less";
 @import "../../../style/gn_metadata.less";
-@import "gn_facets_minimal.less";
-@import "gn_pagination_minimal.less";
-@import "gn_feedback_minimal.less";
+@import "gn_facets_niedersachsen.less";
+@import "gn_pagination_niedersachsen.less";
+@import "gn_feedback_niedersachsen.less";
 // page layout
-@import "gn_layout_minimal.less";
+@import "gn_layout_niedersachsen.less";
 // topics, categories and Inspire
-@import "gn_topics_minimal.less";
+@import "gn_topics_niedersachsen.less";
 // navigation
-@import "gn_navbar_minimal.less";
+@import "gn_navbar_niedersachsen.less";
 // styling for a single result: metadata view
-@import "gn_result_minimal.less";
+@import "gn_result_niedersachsen.less";
 // styling for all search results
-@import "gn_results_minimal.less";
+@import "gn_results_niedersachsen.less";
 // main map and minimap
-@import "gn_map_minimal.less";
+@import "gn_map_niedersachsen.less";
 // footer and bottombar
-@import "gn_footer_minimal.less";
+@import "gn_footer_niedersachsen.less";
 // infolists on the homepage
-@import "gn_infolist_minimal.less";
+@import "gn_infolist_niedersachsen.less";
 // variables for manipulating the theme
-@import "gn_variables_minimal.less"; // must be last
+@import "gn_variables_niedersachsen.less"; // must be last
 
 
 a {
@@ -197,7 +197,7 @@ a {
         box-shadow: none;
       }
       input[type="text"].input-lg {
-        border-color: #ececec;
+        border-color: #ddd;
         border-radius: 0;
         &:focus {
           border-color: #66afe9;
@@ -431,4 +431,4 @@ a {
 //   }
 // }
 
-@import "gn_view_minimal.less";
+@import "gn_view_niedersachsen.less";
