--- a/templates/footer.html
+++ b/templates/footer.html
@@ -66,7 +66,7 @@
           <ul class="nav navbar-nav">
             <li class="gn-footer-text">
               <span data-translate=""
-                    data-translate-values="{platform: 'Enterprise'}">
+                    data-translate-values="{platform: '{{info['system/platform/name']}}', version: '{{info['system/platform/version']}}', subversion: '{{info['system/platform/subVersion']}}'}">
                 versionDetails</span>
             </li>
           </ul>
