--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,17 @@
+<header class="gn-header"
+        data-ng-show="gnCfg.mods.header.enabled && gnCfg.mods.header.isLogoInHeader">
+  <div class="container">
+    <div class=row>
+      <div class="col-md-12 text-{{gnCfg.mods.header.logoInHeaderPosition}}">
+        <a data-gn-active-tb-item="{{gnCfg.mods.home.appUrl}}">
+          <img class="{{gnCfg.mods.header.logoInHeaderPosition}}"
+               alt="{{'siteLogo' | translate}}"
+               data-ng-src="{{gnUrl}}../images/logos/{{info['system/site/siteId']}}.png?random{{info['system/site/lastUpdate']}}"/>
+          </a>
+      </div>
+    </div>
+  </div>
+</header>
 <div class="navbar navbar-default gn-top-bar"
      role="navigation"
      data-ng-show="gnCfg.mods.header.enabled"
@@ -10,18 +24,18 @@
      data-ng-controller="GnSearchController">
   <cookiewarning></cookiewarning>
   <div class=""
-       data-ng-controller="gnsMinimal">
+       data-ng-controller="gnsNiedersachsen">
     <gn-extend-mainctrl></gn-extend-mainctrl>
 
     <div data-gn-saved-selections="">
-      <div data-ng-include="'../../catalog/views/minimal/templates/home.html'"
+      <div data-ng-include="'../../catalog/views/niedersachsen/templates/home.html'"
            data-ng-show="activeTab == '/home'"/>
-      <div data-ng-include="'../../catalog/views/minimal/templates/results.html'"
+      <div data-ng-include="'../../catalog/views/niedersachsen/templates/results.html'"
            data-ng-show="activeTab == '/search'"/>
       <div data-ng-if="isMapViewerEnabled"
-           data-ng-include="'../../catalog/views/minimal/templates/map.html'"
+           data-ng-include="'../../catalog/views/niedersachsen/templates/map.html'"
            data-ng-show="activeTab == '/map'"/>
-      <div data-ng-include="'../../catalog/views/minimal/templates/recordView.html'"
+      <div data-ng-include="'../../catalog/views/niedersachsen/templates/recordView.html'"
            data-ng-show="activeTab == '/metadata'"/>
     </div>
   </div>
@@ -29,5 +43,5 @@
 
 
 <div class="navbar navbar-default gn-bottom-bar" role="navigation"
-     data-ng-include="'../../catalog/views/minimal/templates/footer.html'">
+     data-ng-include="'../../catalog/views/niedersachsen/templates/footer.html'">
 </div>
