--- a/less/gn_admin_niedersachsen.less
+++ b/less/gn_admin_niedersachsen.less
@@ -1,4 +1,4 @@
-@import "gn_search_minimal.less";
+@import "gn_search_niedersachsen.less";
 @import "../../../style/gn_admin";
 
 // import default admin styles
