--- a/less/gn_footer_niedersachsen.less
+++ b/less/gn_footer_niedersachsen.less
@@ -1,6 +1,6 @@
 @import "../../../style/gn_bootstrap.less"; // must be first
 // variables for manipulating the theme
-@import "gn_variables_minimal.less"; // must be last
+@import "gn_variables_niedersachsen.less"; // must be last
 
 .gn-footer-text {
   margin-top: 15px;
