--- a/less/gn_infolist_niedersachsen.less
+++ b/less/gn_infolist_niedersachsen.less
@@ -160,6 +160,7 @@
             text-overflow: ellipsis;
             white-space: nowrap;
             line-height: 22px;
+            font-weight: 500;
           }
         }
         .abstract {
