--- a/less/gn_layout_niedersachsen.less
+++ b/less/gn_layout_niedersachsen.less
@@ -1,6 +1,6 @@
 @import "../../../style/gn_search.less";
 // variables for manipulating the theme
-@import "gn_variables_minimal.less"; // must be last
+@import "gn_variables_niedersachsen.less"; // must be last
 
 .gn-full {
   min-height: 100%;
@@ -13,9 +13,17 @@ html, body {
   height:100%;
 }
 body {
-  padding-top: @gn-subbar-height;
+  padding-top: calc(~"@{gn-subbar-height} + @{gn-header-height}");
 }
-
+// header
+.gn-header {
+  background-color: @gn-header-background;
+  height: @gn-header-height;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
+}
 // background image and color
 [ng-app^="gn_search_"] body, [ng-app="gn_login"] body {
   background-image: url(@gn-background-image); 
