--- a/less/gn_login_niedersachsen.less
+++ b/less/gn_login_niedersachsen.less
@@ -1,6 +1,6 @@
 @import "../../../style/gn_login";
-@import "gn_view_minimal.less";
+@import "gn_view_niedersachsen.less";
 // import default login styles
 @import "../../default/less/gn_login_default.less";
 // variables for manipulating the theme
-@import "gn_variables_minimal.less"; // must be last
+@import "gn_variables_niedersachsen.less"; // must be last
