--- a/less/gn_result_niedersachsen.less
+++ b/less/gn_result_niedersachsen.less
@@ -1,6 +1,6 @@
 @import "../../../style/gn_search.less";
 // variables for manipulating the theme
-@import "gn_variables_minimal.less"; // must be last
+@import "gn_variables_niedersachsen.less"; // must be last
 
 // styling for a single result: metadata view
 .gn-row-view {
