--- a/less/gn_variables_niedersachsen.less
+++ b/less/gn_variables_niedersachsen.less
@@ -7,15 +7,18 @@
 
 // override Bootstrap variables
 @gray-light: #707070;
+@brand-primary: @gray-darker;
 
 // body background (image & color)
 // 
 // picture from https://unsplash.com/
 // 
 // when there is an empty string, no background image is used.
-@gn-background-image: '../catalog/views/minimal/images/bg.jpeg';
+@gn-background-image: '../catalog/views/niedersachsen/images/topo-03.jpg';
 @gn-background-color: @body-bg;
-
+// header
+@gn-header-background: #fff;
+@gn-header-height: 70px;
 // menu bar
 @gn-menubar-background: @navbar-default-bg;
 @gn-menubar-background-active: @navbar-default-link-active-bg;
@@ -27,7 +30,7 @@
 @gn-subbar-height: 52px;
 
 // bottombar
-@gn-bottombar-background: #00274e; // @navbar-default-bg;
+@gn-bottombar-background: #878787; // #00274e; // @navbar-default-bg;
 @gn-bottombar-border-color: #e7e7e7; // @navbar-default-border;
 @gn-bottombar-color: #fff; // @navbar-default-link-color;
 @gn-bottombar-color-hover: #fff; // @navbar-default-link-hover-color;
@@ -49,8 +52,8 @@
 @gn-info-background-color: #f1f1f1f0; // #f1f1f1; // @body-bg;
 // ----- resultcards
 @gn-resultcard-background-color: @body-bg;
-@gn-resultcard-title-background-color: #4a4a4a; // @body-bg;
-@gn-resultcard-title-background-color-hover: #252525; // @gray-light;
+@gn-resultcard-title-background-color: #e50046; // #4a4a4a; // @body-bg;
+@gn-resultcard-title-background-color-hover: #e50046; // #252525; // @gray-light;
 @gn-resultcard-title-color: #fff; // @navbar-default-link-color;
 @gn-resultcard-title-border: 0px solid @navbar-default-border;
 
