Make the main Niedersachsen color a variable

--- a/less/gn_results_niedersachsen.less
+++ b/less/gn_results_niedersachsen.less
@@ -305,7 +305,7 @@ ul.gn-resultview {
     width: 100%;
     max-width: none;
     height: auto;
-    border-left: 4px solid #e50046;
+    border-left: 4px solid @ns-main-color;
     padding: 0 15px;
     margin-bottom: 25px;
     .gn-md-title {
