--- a/less/gn_infolist_niedersachsen.less
+++ b/less/gn_infolist_niedersachsen.less
@@ -90,6 +90,7 @@
       width: 100%;
       padding: 5px 10px;
       .resultcard {
+        border-color: @ns-main-color;
         .title {
           padding-left: 0;
         }
@@ -97,6 +98,7 @@
           max-height: 1.5em !important;
           overflow: hidden;
           padding-left: 0;
+          
         }
         .introduction {
           display: none;
