--- a/less/gn_variables_niedersachsen.less
+++ b/less/gn_variables_niedersachsen.less
@@ -5,6 +5,9 @@
 // general
 @gn-spacing: 10px;
 
+// Niedersachsen
+@ns-main-color: #e50046;
+
 // override Bootstrap variables
 @gray-light: #707070;
 @brand-primary: @gray-darker;
@@ -52,8 +55,8 @@
 @gn-info-background-color: #f1f1f1f0; // #f1f1f1; // @body-bg;
 // ----- resultcards
 @gn-resultcard-background-color: @body-bg;
-@gn-resultcard-title-background-color: #e50046; // #4a4a4a; // @body-bg;
-@gn-resultcard-title-background-color-hover: #e50046; // #252525; // @gray-light;
+@gn-resultcard-title-background-color: @ns-main-color; // #4a4a4a; // @body-bg;
+@gn-resultcard-title-background-color-hover: darken(@ns-main-color, 6.5%); // #252525; // @gray-light;
 @gn-resultcard-title-color: #fff; // @navbar-default-link-color;
 @gn-resultcard-title-border: 0px solid @navbar-default-border;
 
