--- a/less/gn_variables_niedersachsen.less
+++ b/less/gn_variables_niedersachsen.less
@@ -14,8 +14,6 @@
 
 // body background (image & color)
 // 
-// picture from https://unsplash.com/
-// 
 // when there is an empty string, no background image is used.
 @gn-background-image: '../catalog/views/niedersachsen/images/topo-03.jpg';
 @gn-background-color: @body-bg;
@@ -25,7 +23,7 @@
 // menu bar
 @gn-menubar-background: @navbar-default-bg;
 @gn-menubar-background-active: @navbar-default-link-active-bg;
-@gn-menubar-color: #454545; // @navbar-default-link-color;
+@gn-menubar-color: #454545;
 @gn-menubar-color-hover: @navbar-default-link-hover-color;
 @gn-menubar-border-color: @navbar-default-border;
 @gn-menubar-min-height: 53px;
@@ -33,31 +31,31 @@
 @gn-subbar-height: 52px;
 
 // bottombar
-@gn-bottombar-background: #878787; // #00274e; // @navbar-default-bg;
-@gn-bottombar-border-color: #e7e7e7; // @navbar-default-border;
-@gn-bottombar-color: #fff; // @navbar-default-link-color;
-@gn-bottombar-color-hover: #fff; // @navbar-default-link-hover-color;
+@gn-bottombar-background: #878787;
+@gn-bottombar-border-color: #e7e7e7;
+@gn-bottombar-color: #fff; 
+@gn-bottombar-color-hover: #fff;
 
 // footer
-@gn-footer-background: #003366; // #e5e5e5;
-@gn-footer-color: #fff; // #999;
-@gn-footer-color-hover: #fff; // #444;
+@gn-footer-background: #003366; 
+@gn-footer-color: #fff;
+@gn-footer-color-hover: #fff;
 @gn-footer-min-height: 266px;
 @gn-footer-menubar-min-height: 50px;
 
 // home page
 // 
 // ----- topics block
-@gn-topics-background-color: #fbfbfbe3; // #fbfbfb; // @well-bg;
+@gn-topics-background-color: #fbfbfbe3;
 @gn-topics-color: #333;
 @gn-topics-color-hover: #000;
 // ----- info block
 @gn-info-background-color: #f1f1f1f0; // #f1f1f1; // @body-bg;
 // ----- resultcards
 @gn-resultcard-background-color: @body-bg;
-@gn-resultcard-title-background-color: @ns-main-color; // #4a4a4a; // @body-bg;
-@gn-resultcard-title-background-color-hover: darken(@ns-main-color, 6.5%); // #252525; // @gray-light;
-@gn-resultcard-title-color: #fff; // @navbar-default-link-color;
+@gn-resultcard-title-background-color: @ns-main-color;
+@gn-resultcard-title-background-color-hover: darken(@ns-main-color, 6.5%);
+@gn-resultcard-title-color: #fff;
 @gn-resultcard-title-border: 0px solid @navbar-default-border;
 
 // search results page
