--- a/templates/list.html
+++ b/templates/list.html
@@ -27,15 +27,12 @@
       <h3>
         <a data-ng-href="#/metadata/{{md.getUuid()}}"
            title="{{md.title || md.defaultTitle}}">
-
-          <!-- <i class="fa gn-icon-{{md.type[0]}}" title="{{md.type[0] | translate}}"/> -->
           {{(md.title || md.defaultTitle) | characters:80}}</a>
       </h3>
     </div>
 
     <!--start middle row-->
     <div title="{{(md.abstract || md.defaultAbstract) | striptags}}"
-         data-ng-click="openRecord($index, md, searchResults.records)"
          class="clearfix">
       <!-- Thumbnail -->
       <div class="gn-md-thumbnail"
@@ -46,9 +43,32 @@
              data-ng-if="md.getThumbnails().list[0].url"/>
 
       </div>
-      <div class="gn-md-abstract ellipsis">
-        <div>
-          <p>{{(md.abstract || md.defaultAbstract) | striptags}}</p>
+      <div class="gn-md-abstract">
+        <p class="text-justify"
+           data-ng-click="openRecord($index, md, searchResults.records)"
+           dd-text-collapse dd-text-collapse-max-length="350"
+           dd-text-collapse-text="{{md.abstract || md.defaultAbstract}}"></p>
+        <!-- organization -->
+        <div ng-if="md.getContacts().metadata">
+          <b translate="">organisation</b>: {{md.getContacts().metadata}}<br/>
+        </div>
+        <!-- dates -->
+        <div data-ng-show="md.revisionDate">
+          <b data-translate="">revisionDate</b>:
+          <span data-gn-humanize-time="{{md.revisionDate|empty}}" data-from-now="" data-format="YYYY-MM-DD"></span>
+        </div>
+        <div data-ng-show="!md.revisionDate&&md.creationDate">
+          <b data-translate="">creationDate</b>:
+          <span data-gn-humanize-time="{{md.creationDate|empty}}" data-from-now="" data-format="YYYY-MM-DD"></span>
+        </div>
+        <div data-ng-show="!md.revisionDate&&!md.creationDate&&md.publicationDate">
+          <b data-translate="">publicationDate</b>: 
+          <span data-gn-humanize-time="{{md.publicationDate|empty}}" data-from-now="" data-format="YYYY-MM-DD"></span>
+        </div>
+        <!-- keywords -->
+        <div class="gn-md-keywords" data-ng-if="md.keyword.length > 0">
+          <b data-translate="">Keywords</b>:
+          <span class="gn-md-keyword" data-ng-repeat="k in md.keyword">{{k | translate}}</span>
         </div>
       </div>
     </div>
@@ -62,6 +82,14 @@
       <div gn-grid-related gn-grid-related-uuid="::md.getUuid()"
            template="../../catalog/views/niedersachsen/templates/gridRelated.html"></div>
       <gn-links-btn></gn-links-btn>
+      <div class="gn-md-links">
+          <a data-ng-href="{{gnUrl}}api/records/{{md.getUuid()}}/formatters/xml"
+             class="btn btn-default"
+             target="_blank">
+            <i class="fa fa-fw fa-file-code-o"></i>
+            <span data-translate="">xmlView</span>
+          </a>
+        </div>
     </div>
 
     </div>
