--- a/templates/list.html
+++ b/templates/list.html
@@ -36,7 +36,8 @@
          class="clearfix">
       <!-- Thumbnail -->
       <div class="gn-md-thumbnail"
-            data-ng-class="{'gn-md-no-thumbnail': !md.getThumbnails().list[0].url}">
+           data-ng-click="openRecord($index, md, searchResults.records)"
+           data-ng-class="{'gn-md-no-thumbnail': !md.getThumbnails().list[0].url}">
         <img class="gn-img-thumbnail"
              alt="{{md.title || md.defaultTitle}}"
              data-ng-src="{{md.getThumbnails().list[0].url}}"
