Increased the line height

--- a/less/gn_results_niedersachsen.less
+++ b/less/gn_results_niedersachsen.less
@@ -258,6 +258,7 @@ ul.gn-resultview {
       float: left;
       // width = 100% - (width thumbnail + margin thumbnail)
       width: calc(~"100% - 160px");
+      line-height: 1.7em;
       .collapse-text-toggle {
         cursor: pointer;
         &:hover {
@@ -341,7 +342,7 @@ ul.gn-resultview {
     }
     p {
       font-size: 1em;
-      line-height: 1.4;
+      line-height: 1.5;
     }
   }
   li.gn-grid.gn-list.gn-list-nothumbnail {
