Updated the styles with the search box variables. Used the `card header background` color as the base for borders on the search results page.

--- a/less/gn_infolist_niedersachsen.less
+++ b/less/gn_infolist_niedersachsen.less
@@ -90,7 +90,7 @@
       width: 100%;
       padding: 5px 10px;
       .resultcard {
-        border-color: @ns-main-color;
+        border-color: @gn-resultcard-title-background-color;
         .title {
           padding-left: 0;
         }
