--- a/less/gn_results_niedersachsen.less
+++ b/less/gn_results_niedersachsen.less
@@ -229,8 +229,8 @@ ul.gn-resultview {
           display: block;
         }
         a:hover {
-          color: @ns-main-color;
-          border-color: @ns-main-color;
+          color: @gn-resultcard-title-background-color;
+          border-color: @gn-resultcard-title-background-color;
           text-decoration: none;
         }
       }
@@ -322,7 +322,7 @@ ul.gn-resultview {
     width: 100%;
     max-width: none;
     height: auto;
-    border-left: 4px solid @ns-main-color;
+    border-left: 4px solid @gn-resultcard-title-background-color;
     padding: 0 15px;
     margin-bottom: 25px;
     .gn-md-title {
